--- a/src/main/resources/static/projectDeploy.html
+++ b/src/main/resources/static/projectDeploy.html
@@ -41,38 +41,14 @@
     </script>
     <script>
         $(function () {
-            function add0(m) {
-                return m < 10 ? '0' + m : m
-            }
-
-            function format(timestamp) {
-                //timestamp是整数，否则要parseInt转换,不会出现少个0的情况
-
-                var time = new Date(timestamp);
-                var year = time.getFullYear();
-                var month = time.getMonth() + 1;
-                var date = time.getDate();
-                var hours = time.getHours();
-                var minutes = time.getMinutes();
-                var seconds = time.getSeconds();
-                return year + '-' + add0(month) + '-' + add0(date) + ' ' + add0(hours) + ':' + add0(minutes) + ':' + add0(seconds);
-            }
-
-            function getQueryString(name) {
-                var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-                var r = window.location.search.substr(1).match(reg);
-                if (r != null) return unescape(r[2]);
-                return null;
-            }
-
-            var projectId = getQueryString("projectId");
+            var projectId = $.getQueryString("projectId");
             $("#projectIdInput").val(projectId);
             //项目信息展示区
             $.get("project/findProject/" + projectId, null, function (data) {
                 console.log(data);
                 $("#projectNameTd").html(data.projectName);
                 $("#projectManagerTd").html(data.projectManagerText);
-                $("#createDateTimeTd").html(format(data.createDateTime));
+                $("#createDateTimeTd").html($.format(data.createDateTime));
                 $("#projectDescribeTd").html(data.projectDescribe);
                 var projectMemberEntities = data.projectMemberEntities;
                 if (projectMemberEntities != null && projectMemberEntities.length > 0) {
