api接口文档管理系统设计文档

--- a/src/main/resources/static/backup/projectInterface.html
+++ b/src/main/resources/static/backup/projectInterface.html
@@ -65,6 +65,28 @@
 
             //HTTP接口列表展示
             $.get("interfaceHttp/findInterfaceHttpList/" + projectId, null, function (data) {
+//                if (data != null && data.length > 0) {
+//                    var trElements = "";
+//                    for (var i = 0; i < data.length; i++) {
+//                        var trElement = "<tr>";
+//                        trElement += ("<td class='text-center'>" + data[i].idText + "</td>");
+//                        trElement += ("<td class='text-center'>" + data[i].name + "</td>");
+//                        trElement += ("<td class='text-center'>" + data[i].protocol + "</td>");
+//                        trElement += ("<td class='text-center'>" + data[i].method + "</td>");
+//                        trElement += ("<td class='text-center'>" + data[i].address + "</td>");
+//                        trElement += ("<td class='text-center'>" +
+//                        "<button class=\"btn btn-xs btn-success\" data-interfaceid='" + data[i].idText + "' data-toggle='modal' data-target='#myHttpModal'>编辑</button>" +
+//                        "&nbsp;&nbsp;" +
+//                        "<button class=\"btn btn-xs btn-danger\" data-interfaceid='" + data[i].idText + "' data-toggle='modal' data-target='#deleteInterfaceModal'>删除</button>" +
+//                        "&nbsp;&nbsp;" +
+//                        "<button class=\"btn btn-xs btn-warning\" data-interfaceid='" + data[i].idText + "' data-toggle=\"modal\" data-target=\"#myHttpPreviewModal\">预览 </button>" +
+//                        "</td>");
+//                        trElements += trElement;
+//                    }
+//                    $("#httpTableTBody").html(trElements);
+//                } else {
+//                    $("#httpTableTBody").html("<tr><td colspan='6' class='text-center'>暂无信息！</td></tr>");
+//                }
                 $("#httpTableTBody").handlebars($("#httpInterfaceTemplate"), data);
             });
 
