--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -760,25 +760,7 @@
                     <th class="text-center">请求方法</th>
                     <th class="text-center">接口地址</th>
                     <th class="text-center">操作</th>
-                    <tbody id="httpTableTBody">
-                    <!-- HTTP接口列表
-                     <tr>
-                     <td class="text-center">20170711100808001</td>
-                     <td class="text-center">用户查询接口</td>
-                     <td class="text-center">HTTP</td>
-                     <td class="text-center">GET</td>
-                     <td class="text-center">/user/findUser</td>
-                     <td class="text-center">
-                     <button class="btn btn-xs btn-success">编辑</button>
-                     &nbsp;&nbsp;
-                     <button class="btn btn-xs btn-danger">删除</button>
-                     &nbsp;&nbsp;
-                     <button class="btn btn-xs btn-warning" data-toggle="modal"
-                     data-target="#myHttpPreviewModal">预览
-                     </button>
-                     </td>
-                     </tr>-->
-                    </tbody>
+                    <tbody id="httpTableTBody"></tbody>
                 </table>
                 <br/>
                 <div class="text-right">
@@ -793,31 +775,7 @@
                     <th class="text-center">接口类名</th>
                     <th class="text-center">方法名称</th>
                     <th class="text-center">操作</th>
-                    <tbody id="rpcTableTBody">
-                    <!--<tr>-->
-                    <!--<td class="text-center">-->
-                    <!--20170711100808001-->
-                    <!--</td>-->
-                    <!--<td class="text-center">-->
-                    <!--查询用户接口-->
-                    <!--</td>-->
-                    <!--<td class="text-center">-->
-                    <!--com.bozhong.test.service.UserService-->
-                    <!--</td>-->
-                    <!--<td class="text-center">-->
-                    <!--findUserById-->
-                    <!--</td>-->
-                    <!--<td class="text-center">-->
-                    <!--<button class="btn btn-xs btn-success">编辑</button>-->
-                    <!--&nbsp;&nbsp;-->
-                    <!--<button class="btn btn-xs btn-danger">删除</button>-->
-                    <!--&nbsp;&nbsp;-->
-                    <!--<button class="btn btn-xs btn-warning" data-toggle="modal"-->
-                    <!--data-target="#myRpcPreviewModal">预览-->
-                    <!--</button>-->
-                    <!--</td>-->
-                    <!--</tr>-->
-                    </tbody>
+                    <tbody id="rpcTableTBody"></tbody>
                 </table>
             </div>
         </div>
