api接口文档管理系统设计文档

--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -921,46 +921,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <!--<tr>-->
-                                    <!--<td>-->
-                                    <!--<input type="text" name="paramNamesInput" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<select name="paramTypesInput" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--<option value="string">string</option>-->
-                                    <!--</select>-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="paramDescribesInput" type="text" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="requiredsInput" type="hidden" value="false"/>-->
-                                    <!--<input name="requiredsInputCheckBox" type="checkbox"-->
-                                    <!--class="form-control input-sm"-->
-                                    <!--style="height: 18px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="jsontransformatsInput" type="hidden" value="false"/>-->
-                                    <!--<input name="jsontransformatsInputCheckBox" type="checkbox"-->
-                                    <!--class="form-control input-sm" style="height: 18px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="examplesInput" type="text" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="defaultValuesInput" type="text" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<a href="#">-->
-                                    <!--<span class="glyphicon glyphicon-trash"></span>-->
-                                    <!--</a>-->
-                                    <!--</td>-->
-                                    <!--</tr>-->
+                                    <!--HTTP接口参数详情输入表格-->
                                     </tbody>
                                     <tfoot>
                                     <tr>
@@ -1123,46 +1084,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <!--<tr>-->
-                                    <!--<td>-->
-                                    <!--<input type="text" name="paramNamesInput" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<select name="paramTypesInput" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--<option value="string">string</option>-->
-                                    <!--</select>-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="paramDescribesInput" type="text" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="requiredsInput" type="hidden" value="false"/>-->
-                                    <!--<input name="requiredsInputCheckBox" type="checkbox"-->
-                                    <!--class="form-control input-sm"-->
-                                    <!--style="height: 18px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="jsontransformatsInput" type="hidden" value="false"/>-->
-                                    <!--<input name="jsontransformatsInputCheckBox" type="checkbox"-->
-                                    <!--class="form-control input-sm" style="height: 18px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="examplesInput" type="text" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<input name="defaultValuesInput" type="text" class="form-control input-sm"-->
-                                    <!--style="height: 25px;">-->
-                                    <!--</td>-->
-                                    <!--<td>-->
-                                    <!--<a href="#">-->
-                                    <!--<span class="glyphicon glyphicon-trash"></span>-->
-                                    <!--</a>-->
-                                    <!--</td>-->
-                                    <!--</tr>-->
+                                    <!--RPC接口参数详情输入表格-->
                                     </tbody>
                                     <tfoot>
                                     <tr>
@@ -1323,14 +1245,6 @@
                                 </tr>
                                 </thead>
                                 <tbody id="myHttpPreviewTBody">
-                                <!--<tr>-->
-                                <!--<td>userId</td>-->
-                                <!--<td>string</td>-->
-                                <!--<td>用户ID</td>-->
-                                <!--<td>是</td>-->
-                                <!--<td>userId=hello</td>-->
-                                <!--<td>放大发送</td>-->
-                                <!--</tr>-->
                                 </tbody>
                             </table>
                         </div>
@@ -1392,9 +1306,6 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
                 </button>
-                <!--<button type="button" class="btn btn-primary">-->
-                <!--提交更改-->
-                <!--</button>-->
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
@@ -1501,14 +1412,6 @@
                                 </tr>
                                 </thead>
                                 <tbody id="myRpcPreviewTBody">
-                                <!--<tr>-->
-                                <!--<td>userId</td>-->
-                                <!--<td>string</td>-->
-                                <!--<td>用户ID</td>-->
-                                <!--<td>是</td>-->
-                                <!--<td>userId=hello</td>-->
-                                <!--<td>放大发送</td>-->
-                                <!--</tr>-->
                                 </tbody>
                             </table>
                         </div>
@@ -1570,9 +1473,6 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
                 </button>
-                <!--<button type="button" class="btn btn-primary">-->
-                <!--提交更改-->
-                <!--</button>-->
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
